--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- all core CreateJS and 3rd party libraries are listed here -->
         <script src="bower_components/lodash/dist/lodash.min.js"></script>
         <script src="bower_components/EaselJS/lib/easeljs.min.js"></script>
+        <script src="bower_components/V6/index.js"></script>
         <script src="bower_components/opspark-draw/draw.js"></script>
         
     </head>
